@@ -1875,7 +1875,7 @@ directory_handle_command_post(dir_connection_t *conn, const char *headers,
 
   if (!strcmp(url,"/tor/")) { /* server descriptor post */
     const char *msg;
-    int r = dirserv_add_descriptor(body, &msg);
+    int r = dirserv_add_multiple_descriptors(body, &msg);
     tor_assert(msg);
     if (r > 0)
       dirserv_get_directory(); /* rebuild and write to disk */
