@@ -62,6 +62,9 @@ Changes in version 0.2.0.1-alpha - 2007-??-??
       should be about 60%.  (Limitation: servers do not yet upload extra-info
       documents; authorities do not yet cache them.)  [Partially implements
       proposal 104.]
+    - Directory authorities allow multiple router descriptors and/or extra
+      info documents to be uploaded in a single go.  This will make
+      implementing proposal 104 simpler.
 
   o Minor features (controller):
     - Add a new config option __DisablePredictedCircuits designed for
